--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -18,8 +18,8 @@
             aria-label="Social media navigation">
             <div class="container">
                 <a class="d-flex logo-font align-items-center navbar-brand">
-                    <img src="{% static 'images/' %}" alt="Logo">
-                    <span class="logo-text">####</span>
+                    <img src="{% static 'images/musicheadphonelogo.svg' %}" alt="Logo">
+                    <span class="logo-text">last.fm</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,9 +34,9 @@
         {% endblock %}
     </main>
 
-    <footer class="footer-nav bg-light text-center text-lg-start py-2 mt-auto">
+    <footer class="footer-nav text-center text-lg-start py-2 mt-auto">
         <div class="container d-flex justify-content-between align-items-center">
-            <span class="brand-span text-muted">####</span>
+            <span class="brand-span">last.fm</span>
             <nav class="link-footer nav">
                 <a class="nav-link" href="https://github.com/MRGiorgiosDev8" target="_blank" title="GitHub">
                     <i class="fab fa-github github-icon"></i>
