--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -21,11 +21,19 @@
                     <img src="{% static 'images/musicheadphonelogo.svg' %}" alt="Logo">
                     <span class="logo-text">last.fm</span>
                 </a>
+
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
+
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <form class="d-flex ms-auto" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-danger" type="submit">Search</button>
+                    </form>
                 </div>
+            </div>
         </nav>
     </header>
 
