--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="csrf-token" content="{{ csrf_token }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>{% block title %}#####{% endblock %}</title>
+    <title>{% block title %}RubySound.fm{% endblock %}</title>
     <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/custom.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -18,7 +18,7 @@
             <div class="container">
                 <a class="d-flex logo-font align-items-center navbar-brand">
                     <img src="{% static 'images/musicheadphonelogo.svg' %}" alt="Logo">
-                    <span class="logo-text">last.fm</span>
+                    <span class="logo-text">RubySound.fm</span>
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -28,8 +28,7 @@
 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <form class="d-flex ms-auto form-search" role="search">
-                        <input class="form-control me-2 input-search" type="search" placeholder="Find"
-                            aria-label="Search"
+                        <input class="form-control me-2 input-search" type="search" aria-label="Search"
                             style="padding-left: 30px; background-image: url('data:image/svg+xml;utf8,<svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; fill=&quot;%23dc3030&quot;><path d=&quot;M10 2a8 8 0 105.293 14.707l4.707 4.707 1.414-1.414-4.707-4.707A8 8 0 0010 2zm0 2a6 6 0 110 12 6 6 0 010-12z&quot;/></svg>'); background-repeat: no-repeat; background-position: 10px center; background-size: 16px;">
                         <button class="btn custom-button" type="submit">Search</button>
                     </form>
@@ -45,7 +44,9 @@
 
     <footer class="footer-nav text-center text-lg-start py-2 mt-auto">
         <div class="container d-flex justify-content-between align-items-center">
-            <span class="brand-span">last.fm</span>
+            <span class="brand-span">
+                <span style="color: #dc3030;" class="copyright">&copy;</span>RubySound.fm
+            </span>
             <nav class="link-footer nav">
                 <a class="nav-link" href="https://github.com/MRGiorgiosDev8" target="_blank" title="GitHub">
                     <i class="fab fa-github github-icon"></i>
