new music_search.js update index.html base.html views.py urls.py

--- a/music_api/templates/index.html
+++ b/music_api/templates/index.html
@@ -1,3 +1,8 @@
 {% extends 'base.html' %}
-
 {% load static %}
+
+{% block title %}Поиск музыки | RubySound.fm ♬{% endblock %}
+
+{% block content %}
+<div id="searchResults" class="search-container"></div>
+{% endblock %}
