--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -66,6 +66,7 @@
     </footer>
 
     <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/music_search.js' %}"></script>
 </body>
 
 </html>
