--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -84,16 +84,18 @@
 }
 
 .track-item {
-    background-color: #1e1e1e;
+    background-color: #000000;
     border-radius: 8px;
     padding: 15px;
     margin-bottom: 15px;
-    border-left: 3px solid #dc3030;
+    border-left: 2.1px solid #ff4137;
+    border-right: 2.1px solid #ff4137;
     transition: all 0.3s ease;
+    cursor: pointer;
 }
 
 .track-item:hover {
-    background-color: #252525;
+    background-color: #141414;
     transform: translateY(-2px);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
