--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -2,10 +2,18 @@
     background-color: #000000;
     padding-top: 0.1vh;
     padding-bottom: 0.3vh;
+    border-radius: 30px;
 }
 
 .footer-nav {
     background-color: #000000;
+    border: 11px solid rgb(229, 229, 229);
+    border-radius: 20px;
+}
+
+.custom-navbar, .footer-nav, .track-item {
+    border: 11px solid rgb(229, 229, 229);
+    box-shadow: 0px 0px 11px rgb(104, 104, 104);
 }
 
 .logo-font {
@@ -81,15 +89,16 @@
     max-width: 800px;
     margin: 80px auto;
     padding: 20px;
+    margin-bottom: 7px;
 }
 
 .track-item {
     background-color: #000000;
-    border-radius: 8px;
     padding: 15px;
     margin-bottom: 15px;
     border-left: 2.1px solid #ff4137;
     border-right: 2.1px solid #ff4137;
+    border-radius: 30px;
     transition: all 0.3s ease;
     cursor: pointer;
 }
