--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Boldonse&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="{% static 'images/musicheadphonelogo.ico' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'images/musicico.ico' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -49,7 +49,7 @@
     <footer class="footer-nav text-center text-lg-start py-2 mt-auto">
         <div class="container d-flex justify-content-between align-items-center">
             <span class="brand-span">
-                <span style="color: #dc3030;" class="copyright">&copy;</span> RubySound.fm <span style="color: #dc3030;">♬</span>
+                <span style="color: red;" class="copyright">&copy;</span> RubySound.fm <span style="color: red;">♬</span>
             </span>
             <nav class="link-footer nav">
                 <a class="nav-link" href="https://github.com/MRGiorgiosDev8" target="_blank" title="GitHub">
