--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -123,7 +123,7 @@
     font-family: "Play", sans-serif;
     font-weight: 400;
     font-style: normal;
-    font-weight: 500;
+    font-weight: bold;
     font-size: 3em;
     border-bottom: 2.1px solid #ff4137;
     border-radius: 2.6px;
@@ -179,4 +179,12 @@
 
 .track-item .track-listeners {
     color: rgb(215, 215, 215);
+}
+
+.track-image {
+    border-radius: 7px;
+    width: 80px;
+    height: 80px;
+    margin-bottom: 7px;
+    border: 0.3px solid whitesmoke;
 }
