--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -7,7 +7,6 @@
 
 .footer-nav {
     background-color: #000000;
-    border: 11px solid rgb(229, 229, 229);
     border-radius: 20px;
 }
 
@@ -125,8 +124,11 @@
     font-style: normal;
     font-weight: bold;
     font-size: 3em;
-    border-bottom: 2.1px solid #ff4137;
-    border-radius: 2.6px;
+    border-radius: 20px;
+    border-left: 2.1px solid #ff4137;
+    border-right: 2.1px solid #ff4137;
+    box-shadow: 0px 0px 3px rgb(104, 104, 104);
+    padding: 7px;
   }
 
 /* Стили для поиска музыки */
@@ -141,8 +143,8 @@
     background-color: #000000;
     padding: 15px;
     margin-bottom: 15px;
-    border-left: 2.1px solid #ff4137;
-    border-right: 2.1px solid #ff4137;
+    border-left: 2px solid #ff4137;
+    border-right: 2px solid #ff4137;
     border-radius: 30px;
     transition: all 0.3s ease;
     cursor: pointer;
