--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -125,8 +125,11 @@
     font-weight: bold;
     font-size: 3em;
     border-radius: 20px;
+    background-color: whitesmoke;
     border-left: 2.1px solid #ff4137;
     border-right: 2.1px solid #ff4137;
+    border-top: 0.7px solid black;
+    border-bottom: 0.7px solid black;
     box-shadow: 0px 0px 3px rgb(104, 104, 104);
     padding: 7px;
   }
