update views.py serializers.py custom.css

--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -116,7 +116,7 @@
 
   h2 {
     text-align: center;
-    color: #bf413b;
+    color: #dc3030e6;
     margin-top: 3vh;
     margin-bottom: 3vh;
     font-family: "Play", sans-serif;
