--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -133,8 +133,8 @@ main {
     font-size: 3em;
     border-radius: 20px;
     background-color: rgba(0, 0, 0, 0.932);
-    border-left: 2.1px solid #ff4137;
-    border-right: 2.1px solid #ff4137;
+    border-left: 2.1px solid rgba(255, 65, 55, 0.75);
+    border-right: 2.1px solid rgba(255, 65, 55, 0.75);
     border-top: 8px solid whitesmoke;
     border-bottom: 8px solid white;
     box-shadow: 0px 0px 3px rgb(104, 104, 104);
@@ -153,8 +153,8 @@ main {
     background-color: #000000;
     padding: 15px;
     margin-bottom: 15px;
-    border-left: 2px solid #ff4137;
-    border-right: 2px solid #ff4137;
+    border-left: 2px solid rgba(255, 65, 55, 0.75);
+    border-right: 2px solid rgba(255, 65, 55, 0.75);
     border-radius: 30px;
     transition: all 0.3s ease;
     cursor: pointer;
