--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -172,12 +172,15 @@ main {
     border-radius: 30px;
     transition: all 0.3s ease;
     cursor: pointer;
+    opacity: 0;
+    transform: translateX(-100px);
+    visibility: hidden; 
+    will-change: transform, opacity; 
+    transition: visibility 0.01s; 
 }
 
 .track-item:hover {
     background-color: #141414;
-    transform: translateY(-2px);
-    box-shadow: 0px 0px 11px rgb(104, 104, 104);
 }
 
 .track-title {
