--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -71,7 +71,8 @@
     <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/music_search.js' %}"></script>
 <!--    <script src="https://cdn.jsdelivr.net/npm/animejs@latest/lib/anime.min.js"></script>-->
-        <script src="https://cdn.jsdelivr.net/npm/animejs@4.0.2/lib/anime.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/animejs@latest/lib/anime.min.js"></script>
+        <script src="{% static 'js/track-animations.js' %}"></script>
 </body>
 
 </html>
