update music-search.js pagination

--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -43,9 +43,7 @@
              background-position: 10px center;
              background-size: 16px;">
                         </div>
-                        <button class="btn custom-button ms-2" type="submit">
-                            <i class="fas fa-search"></i> Search
-                        </button>
+                        <button class="btn custom-button ms-2" type="submit">Search</button>
                     </form>
                 </div>
             </div>
