--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -245,6 +245,8 @@ h2,
 
 .alert-danger, .alert-dark {
     margin-top: 7vh;
+    transform-origin: center;
+    will-change: transform, opacity;
 }
 
 .btn-show-more {
