--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -46,6 +46,9 @@ main {
     font-weight: 400;
     font-style: normal;
     letter-spacing: 1px;
+    perspective: 800px;
+    display: inline-block;
+    overflow: hidden;
 }
 
 .brand-span {
