--- a/music_api/templates/home.html
+++ b/music_api/templates/home.html
@@ -4,7 +4,7 @@
 
 {% block popular %}
  <section id="popular-block" class="container my-5">
-  <h2 class="mb-4 text-center">Популярно прямо сейчас</h2>
+  <h2 class="mb-4 text-start popular-h2 shadow-sm">Most Popular</h2>
 
   <div class="row row-cols-1 row-cols-lg-2 g-4" id="trending-container">
     <div class="col-12 text-center text-muted">Загрузка…</div>
