load status spinner for trending.js

--- a/music_api/templates/home.html
+++ b/music_api/templates/home.html
@@ -7,7 +7,7 @@
   <h2 class="mb-4 text-start popular-h2 shadow-sm">Most Popular</h2>
 
   <div class="row row-cols-1 row-cols-lg-2 g-4" id="trending-container">
-    <div class="col-12 text-center text-muted">Загрузка…</div>
+    <div class="col-12 text-center text-muted"></div>
   </div>
 </section>
 {% endblock %}
