--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -185,8 +185,8 @@ h2,
     opacity: 0;
     will-change: transform, opacity;
     margin: 20px 0;
-    transition: none; 
-  }
+    transition: none;
+}
 
 .track-item:hover {
     background-color: #141414;
@@ -237,12 +237,13 @@ h2,
 .track-item-wrapper {
     display: flex;
     align-items: center;
-    gap: 20px; 
+    gap: 20px;
     margin-bottom: 20px;
     position: relative;
 }
 
-.alert-danger, .alert-dark {
+.alert-danger,
+.alert-dark {
     margin-top: 7vh;
     transform-origin: center;
     will-change: transform, opacity;
@@ -253,7 +254,7 @@ h2,
 }
 
 .popular-h2 {
-    font-size: 2em;
+    font-size: 1.8em;
     margin-top: 4vh;
     margin-bottom: 4vh;
     border-radius: 20px;
@@ -261,10 +262,10 @@ h2,
     box-shadow: none;
     background-color: rgba(241, 241, 241, 0.649);
     border-radius: 14px;
-    -webkit-text-stroke: #fff 0.3px;
+    -webkit-text-stroke: #fff 0.2px;
     font-weight: 400;
-    color: #434343f6;
-    font-family: Arial, Helvetica, sans-serif;
+    color: #242424f6;
+    font-family: "Roboto", sans-serif;
 }
 
 .card-custom {
