--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Boldonse&family=Play:wght@400;700&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Boldonse&family=Play:wght@400;700&family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="{% static 'images/musicico.ico' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -36,8 +36,7 @@
                     <form class="d-flex ms-auto form-search" role="search" autocomplete="on">
                         <div class="position-relative flex-grow-1">
                             <input class="form-control me-2 input-search" type="search" name="q" id="search-query"
-                                aria-label="Search tracks" autocomplete="on" placeholder="find music..."
-                                style="padding-left: 30px;
+                                aria-label="Search tracks" autocomplete="on" placeholder="find music..." style="padding-left: 30px;
              background-image: url('data:image/svg+xml;utf8,<svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; fill=&quot;%23dc3030&quot;><path d=&quot;M10 2a8 8 0 105.293 14.707l4.707 4.707 1.414-1.414-4.707-4.707A8 8 0 0010 2zm0 2a6 6 0 110 12 6 6 0 010-12z&quot;/></svg>');
              background-repeat: no-repeat;
              background-position: 10px center;
@@ -51,9 +50,9 @@
     </header>
 
     <main class="flex-grow-1">
-    {% block popular %}{% endblock %}
-    {% block content %}{% endblock %}
-</main>
+        {% block popular %}{% endblock %}
+        {% block content %}{% endblock %}
+    </main>
 
     <footer class="footer-nav text-center text-lg-start py-2 mt-auto">
         <div class="container d-flex justify-content-between align-items-center">
