--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -24,8 +24,7 @@ main {
 }
 
 .custom-navbar,
-.footer-nav,
-.track-item {
+.footer-nav {
     border: 7px solid rgb(229, 229, 229);
     box-shadow: 0px 0px 7px rgb(104, 104, 104);
 }
@@ -132,27 +131,13 @@ main {
 
 h2 {
     text-align: center;
-    color: #dc3030e6;
-    margin-top: 3vh;
-    margin-bottom: 3vh;
-    font-family: "Play", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 2.8em;
-    border-radius: 20px;
-    background-color: rgba(0, 0, 0, 0.932);
-    border-left: 2.1px solid rgba(255, 65, 55, 0.75);
-    border-right: 2.1px solid rgba(255, 65, 55, 0.75);
-    border-top: 8px solid whitesmoke;
-    border-bottom: 8px solid whitesmoke;
-    box-shadow: 0px 0px 3px rgb(104, 104, 104);
-    padding: 4px;
-}
-
-h2,
-.track-item {
-    box-shadow: 0px 0px 11px rgb(18, 18, 18);
+    color: #242424f6;
+    font-family: "Roboto", sans-serif;
+    font-size: 2.6em;
+    background-color: rgba(241, 241, 241, 0.649);
+    border: 2px solid #ffff;
+    border-radius: 14px;
+    -webkit-text-stroke: #fff 0.2px;
 }
 
 /* Стили для поиска музыки */
@@ -164,20 +149,17 @@ h2,
 }
 
 .track-item {
-    background-color: #000000;
-    padding: 15px;
-    margin-bottom: 15px;
+    background-color: white;
+    padding: 14px;
     border-left: 2px solid rgba(255, 65, 55, 0.75);
     border-right: 2px solid rgba(255, 65, 55, 0.75);
-    border-radius: 30px;
+    border-radius: 14px;
     transition: all 0.3s ease;
     cursor: pointer;
     opacity: 0;
     transform: translateY(-100px);
     visibility: hidden;
     will-change: transform, opacity;
-    margin-bottom: 15px;
-    flex-grow: 1;
 }
 
 #searchResults h2 {
@@ -189,7 +171,7 @@ h2,
 }
 
 .track-item:hover {
-    background-color: #141414;
+    background-color: #fff;
 }
 
 .track-title {
@@ -219,6 +201,11 @@ h2,
     color: rgb(215, 215, 215);
 }
 
+.track-item-wrapper {
+    margin-top: -50px;
+    margin-bottom: 4px;
+}
+
 .track-image {
     border-radius: 7px;
     width: 80px;
@@ -228,18 +215,10 @@ h2,
 }
 
 .arrow-track {
-    width: 130px;
-    height: 130px;
+    width: 111px;
+    height: 111px;
     margin-left: -22vh;
     opacity: 0;
-}
-
-.track-item-wrapper {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-    margin-bottom: 20px;
-    position: relative;
 }
 
 .alert-danger,
