--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -136,8 +136,11 @@ h2 {
     font-size: 2.6em;
     background-color: rgba(241, 241, 241, 0.649);
     border: 2px solid #ffff;
+    border-left: 2px solid rgba(255, 65, 55, 0.75);
+    border-right: 2px solid rgba(255, 65, 55, 0.75);
     border-radius: 14px;
     -webkit-text-stroke: #fff 0.2px;
+    font-weight: 400;
 }
 
 /* Стили для поиска музыки */
@@ -151,8 +154,8 @@ h2 {
 .track-item {
     background-color: white;
     padding: 14px;
-    border-left: 2px solid rgba(255, 65, 55, 0.75);
-    border-right: 2px solid rgba(255, 65, 55, 0.75);
+    border-left: 1.4px solid rgba(255, 65, 55, 0.75);
+    border-right: 1.4px solid rgba(255, 65, 55, 0.75);
     border-radius: 14px;
     transition: all 0.3s ease;
     cursor: pointer;
@@ -202,7 +205,7 @@ h2 {
 }
 
 .track-item-wrapper {
-    margin-top: -50px;
+    margin-top: 40px;
     margin-bottom: 4px;
 }
 
@@ -210,7 +213,6 @@ h2 {
     border-radius: 7px;
     width: 80px;
     height: 80px;
-    margin-bottom: 7px;
     border: 0.3px solid whitesmoke;
 }
 
@@ -234,10 +236,13 @@ h2 {
 
 .popular-h2 {
     font-size: 1.8em;
+    padding: 4px;
     margin-top: 4vh;
     margin-bottom: 4vh;
     border-radius: 20px;
     border: 2px solid #ffff;
+    border-left: 2px solid rgba(255, 65, 55, 0.75);
+    border-right: 2px solid rgba(255, 65, 55, 0.75);
     box-shadow: none;
     background-color: rgba(241, 241, 241, 0.649);
     border-radius: 14px;
@@ -248,6 +253,6 @@ h2 {
 }
 
 .card-custom {
-    border-left: 1.4px solid #dc3030f6;
-    border-right: 1.4px solid #dc3030e6;
+    border-left: 1.4px solid rgba(255, 65, 55, 0.75);
+    border-right: 1.4px solid rgba(255, 65, 55, 0.75);
 }
