--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -76,10 +76,12 @@
 
     <script src="{% static 'vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
     <script src="{% static 'js/music_search.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12/dist/gsap.min.js"></script>
     <!--    <script src="https://cdn.jsdelivr.net/npm/animejs@latest/lib/anime.min.js"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/animejs@latest/lib/anime.min.js"></script>
     <script src="{% static 'js/track-animations.js' %}"></script>
     <script src="{% static 'js/trending.js' %}"></script>
+    <script src="{% static 'js/animation_home.js' %}"></script>
 </body>
 
 </html>
