--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -252,7 +252,7 @@ h2 {
     font-family: "Roboto", sans-serif;
 }
 
-.card-custom {
+.card-custom, .card-year {
     border-left: 1.4px solid rgba(255, 65, 55, 0.75);
     border-right: 1.4px solid rgba(255, 65, 55, 0.75);
 }
