new preview in views.py update custom.cs year.js

--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -293,6 +293,10 @@ h2 {
     .btn-show-more {
         margin-top: 1vh;
     }
+
+    .popular-h2::after {
+        width: 16%;
+    }
 }
 
 /* Планшеты */
