--- a/music_api/templates/base.html
+++ b/music_api/templates/base.html
@@ -62,7 +62,7 @@
                     <form class="d-flex ms-auto form-search" role="search" autocomplete="on">
                         <div class="position-relative flex-grow-1">
                             <input class="form-control me-2 input-search" type="search" name="q" id="search-query"
-                                aria-label="Search tracks" autocomplete="on" placeholder="find music..." style="padding-left: 30px;
+                                aria-label="Search tracks" autocomplete="on" placeholder="поиск музыки..." style="padding-left: 30px;
              background-image: url('data:image/svg+xml;utf8,<svg xmlns=&quot;http://www.w3.org/2000/svg&quot; viewBox=&quot;0 0 24 24&quot; fill=&quot;%23dc3030&quot;><path d=&quot;M10 2a8 8 0 105.293 14.707l4.707 4.707 1.414-1.414-4.707-4.707A8 8 0 0010 2zm0 2a6 6 0 110 12 6 6 0 010-12z&quot;/></svg>');
              background-repeat: no-repeat;
              background-position: 10px center;
