--- a/music_api/templates/home.html
+++ b/music_api/templates/home.html
@@ -4,13 +4,13 @@
 
 {% block popular %}
  <section id="popular-block" class="container my-5">
-  <h2 class="mb-4 text-center popular-h2 shadow-sm">Most Popular</h2>
+  <h2 class="mb-4 text-center popular-h2 shadow-sm">Топ-Артисты</h2>
 
   <div class="row row-cols-1 row-cols-lg-2 g-4" id="trending-container">
     <div class="col-12 text-center text-muted"></div>
   </div>
 
-  <h2 class="mb-4 mt-3 text-center year2025-h3 popular-h2 shadow-sm">Live Chart</h2>
+  <h2 class="mb-4 mt-3 text-center year2025-h3 popular-h2 shadow-sm">Актуальный чарт </h2>
   <div id="year2025-container" class="row row-cols-2 row-cols-md-3 row-cols-lg-5 g-3"></div>
 
 
