--- a/music_api/static/css/custom.css
+++ b/music_api/static/css/custom.css
@@ -89,8 +89,8 @@ main {
 
 .input-search {
     padding: 3px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: 400;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
 }
 
 .input-search:focus {
@@ -131,7 +131,7 @@ main {
 
 h2 {
     text-align: center;
-    color: #242424e0;
+    color: #242424c5;
     font-family: "Roboto", sans-serif;
     font-size: 2.3em;
     background-color: #ffffff80;
